Added some text blocks

--- a/Aman_Islam_Telco_Assignment_Template.ipynb
+++ b/Aman_Islam_Telco_Assignment_Template.ipynb
@@ -3466,6 +3466,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "XBG Boosting Trees"
+      ],
+      "metadata": {
+        "id": "VwpZ2V-5q6lk"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from sklearn.model_selection import train_test_split\n",
@@ -3573,6 +3582,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "XGB Importance graph"
+      ],
+      "metadata": {
+        "id": "yyKkbtFhq9nn"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import plotly.express as px\n",
@@ -3642,6 +3660,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Sequential Neural Network(Base Model #2)"
+      ],
+      "metadata": {
+        "id": "6YtW_1d_q1ue"
+      }
     },
     {
       "cell_type": "code",
@@ -4057,6 +4084,24 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Setting up my MLFlow experiment while also hyperparameter optimizing with Optuna"
+      ],
+      "metadata": {
+        "id": "9Jr3OyXzrD5Z"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Created Parent and Child runs and optimized 6 different hyperparameters"
+      ],
+      "metadata": {
+        "id": "dUXn8KLprSrs"
+      }
     },
     {
       "cell_type": "code",
