Added some comments

--- a/Aman_Islam_Telco_Assignment_Template.ipynb
+++ b/Aman_Islam_Telco_Assignment_Template.ipynb
@@ -2396,7 +2396,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Ordinal encoding was not neccessary as there was no need for a"
+        "Ordinal encoding was not neccessary as there was no need for a orders in the encoding"
       ],
       "metadata": {
         "id": "i5VbApvnFNT9"
@@ -2922,6 +2922,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Making sure each variable was encoded correctly"
+      ],
+      "metadata": {
+        "id": "pbWOktDyYrGb"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "data.info()"
@@ -2982,6 +2991,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Checking which variables correlation to churn is the highest. Correlation implies relationship to variables so we can see what variables might hold more importance based on the magnitude of correlation"
+      ],
+      "metadata": {
+        "id": "SxwsQ8XVYvzT"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "categorical_columns = [col for col in categorical_columns_initial if col not in binary_columns]\n",
@@ -3018,6 +3036,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Saving my cleaned dataset"
+      ],
+      "metadata": {
+        "id": "ONqkl0YWZDfd"
+      }
     },
     {
       "cell_type": "code",
@@ -3070,6 +3097,15 @@
       ],
       "metadata": {
         "id": "B3P9HIigTI_5"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Loading in new clean dataset"
+      ],
+      "metadata": {
+        "id": "bPFEjwBvZGoL"
       }
     },
     {
@@ -3543,6 +3579,33 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Base Model #1"
+      ],
+      "metadata": {
+        "id": "4VD8ds7ZZVWw"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "I created an XGB model which includes 8 different hyperparmeters"
+      ],
+      "metadata": {
+        "id": "GedGF6e7ZW2Q"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "I evaluated the model based on 4 main different metrics: ROC, Precision, Recall and Accuracy"
+      ],
+      "metadata": {
+        "id": "CQN5uevDZjoE"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from sklearn.model_selection import train_test_split\n",
@@ -3656,6 +3719,15 @@
       ],
       "metadata": {
         "id": "yyKkbtFhq9nn"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Plotting which variables held the most importance in the model's predictions."
+      ],
+      "metadata": {
+        "id": "9gMhC1sMZyju"
       }
     },
     {
